--- a/src/components/Custom/Design/Design.css
+++ b/src/components/Custom/Design/Design.css
@@ -4,6 +4,7 @@ h5 {
 
 .Design {
     min-height: calc(100vh - 40px);
+    width: 100%;
     box-sizing: border-box;
     padding-top: 40px;
     background-color: #F6F7F8;
