--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,6 @@
 .Header {
     height: 40px;
-    min-width: 100vw;
-    max-width: 100vw;
+    width: 100%;
     box-sizing: border-box;
     background-color: #1D1D26;
     position: fixed;
